--- a/Проба проекта 2/MainWindow.xaml
+++ b/Проба проекта 2/MainWindow.xaml
@@ -29,13 +29,18 @@
         <Border BorderBrush="Black" BorderThickness="1" Margin="2,3,2,2" Grid.Row="1" Grid.RowSpan="2">
             <StackPanel Margin="1,1,1,1" Width="Auto">
                 <Label Content="SQL код"/>
-                <RichTextBox>
+                <RichTextBox Name="rtb">
+                    <RichTextBox.Resources>
+                        <Style TargetType="{x:Type Paragraph}">
+                            <Setter Property="Margin" Value="0"/>
+                        </Style>
+                    </RichTextBox.Resources>
                     <FlowDocument>
-                        <Paragraph>
-                            <Run Text="Введите сюда команду"/>
-                        </Paragraph>
+                        <Paragraph FontFamily="Consolas" xml:space="preserve">SELECT *
+FROM ;</Paragraph>
                     </FlowDocument>
                 </RichTextBox>
+                <Button Click="ForceFormatting" Grid.Row="1">Go</Button>
                 <Button Content="Выполнить" VerticalAlignment="Bottom" HorizontalAlignment="Right"/>
 
             </StackPanel>
